# midnight-day-1

./: README.md
WebsocketBackend/: CMakeLists.txt
WebsocketBackend/src/: CMakeLists.txt  main.cpp
docs/: index.apple-touch-icon.png.import  index.html  index.pck  index.png.import
midnight1/: export_presets.cfg  icon.svg.import  imposter.gd.uid  node_2d.gd  node_2d.gd.uid  project.godot  tick_image.png.import
midnight1/Assets/: BadLogo.png.import  BadlogoMJ.png.import  BoldPixels.otf.import  LowresPixel-Regular.otf.import  Sprite-0001.aseprite  WinLogo.png.import  arrow.png.import  blfeu.png.import  blu.png.import  bsod.png.import  endactivetab.png.import  endinactivetab.png.import  gradeuo.png.import  inactivetab.png.import  letterh.jpg.import  mathsicon.png.import  menu_background.png.import  murderedmysteryicon.aseprite  murderedmysteryicon.png.import  mysteryicon.png.import  opentaskstab.aseprite  opentaskstab.png.import  schoolmap.aseprite  scienceicon.png.import  urlbox.aseprite  urlbox.png.import  votedLogo.png.import  williamdanielschoollogo.aseprite  winscreen.aseprite  winscreen.png.import  writingicon.png.import  yellow_square.png.import
midnight1/Scenes/: blue_ball.png.import  drawer.gd  drawer.gd.uid  green_ball.png.import  match-shape-scene.tscn  orange_ball.png.import  red_ball.png.import
midnight1/Scripts/: LetterH.tres.gd  LetterH.tres.gd.uid  match-shape-scene.gd  match-shape-scene.gd.uid
midnight1/scenes/: ClockMinigame.gd  ClockMinigame.gd.uid  Static.gd  Static.gd.uid  arrow.gd  arrow.gd.uid  arrow.tscn  bsod.tscn  (+36 more)
pythonbackend/: main.py
(+25 files in other folders)
